swagger docs added to branch CRUD
