# month_2/lesson_19(mentor)/api/handler/branch.go
@@ -10,6 +10,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// CreateBranch godoc
+// @Router       /branch [POST]
+// @Summary      CREATES BRANCH
+// @Description  CREATES BRANCH BASED ON GIVEN DATA
+// @Tags         BRANCH
+// @Accept       json
+// @Produce      json
+// @Param        data  body      models.CreateBranch  true  "branch data"
+// @Success      200  {string}  string
+// @Failure      400  {object}  response.ErrorResp
+// @Failure      404  {object}  response.ErrorResp
+// @Failure      500  {object}  response.ErrorResp
 func (h *Handler) CreateBranch(c *gin.Context) {
 	var branch models.CreateBranch
 	err := c.ShouldBind(&branch)
@@ -28,8 +40,19 @@ func (h *Handler) CreateBranch(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"message": "Branch successfully created", "id": resp})
 }
 
+// GetBranch godoc
+// @Router       /branch/{id} [GET]
+// @Summary      GET BY ID
+// @Description  get branch by ID
+// @Tags         BRANCH
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "Branch ID" format(uuid)
+// @Success      200  {object}  models.Branch
+// @Failure      400  {object}  response.ErrorResp
+// @Failure      404  {object}  response.ErrorResp
+// @Failure      500  {object}  response.ErrorResp
 func (h *Handler) GetBranch(c *gin.Context) {
-
 	id := c.Param("id")
 
 	resp, err := h.storage.Branch().GetBranch(&models.IdRequest{Id: id})
@@ -42,6 +65,20 @@ func (h *Handler) GetBranch(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
+// ListBranchs godoc
+// @Router       /branch [GET]
+// @Summary      GET  ALL BRANCHS
+// @Description  gets all branch based on limit, page and search by name
+// @Tags         BRANCH
+// @Accept       json
+// @Produce      json
+// @Param   limit         query     int        false  "limit"          minimum(1)     default(10)
+// @Param   page         query     int        false  "page"          minimum(1)     default(1)
+// @Param   search         query     string        false  "search"
+// @Success      200  {object}  models.GetAllBranch
+// @Failure      400  {object}  response.ErrorResp
+// @Failure      404  {object}  response.ErrorResp
+// @Failure      500  {object}  response.ErrorResp
 func (h *Handler) GetAllBranch(c *gin.Context) {
 	h.log.Info("request GetAllBranch")
 	page, err := strconv.Atoi(c.DefaultQuery("page", "1"))
@@ -70,6 +107,20 @@ func (h *Handler) GetAllBranch(c *gin.Context) {
 	h.log.Warn("response to GetAllBranch")
 	c.JSON(http.StatusOK, resp)
 }
+
+// UpdateBranch godoc
+// @Router       /branch/{id} [PUT]
+// @Summary      UPDATE BRANCH BY ID
+// @Description  UPDATES BRANCH BASED ON GIVEN DATA AND ID
+// @Tags         BRANCH
+// @Accept       json
+// @Produce      json
+// @Param        id    path     string  true  "id of branch" format(uuid)
+// @Param        data  body      models.CreateBranch  true  "branch data"
+// @Success      200  {string}  string
+// @Failure      400  {object}  response.ErrorResp
+// @Failure      404  {object}  response.ErrorResp
+// @Failure      500  {object}  response.ErrorResp
 func (h *Handler) UpdateBranch(c *gin.Context) {
 	var branch models.Branch
 	err := c.ShouldBind(&branch)
@@ -90,6 +141,18 @@ func (h *Handler) UpdateBranch(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Branch successfully updated", "id": resp})
 }
 
+// DeleteBranch godoc
+// @Router       /branch/{id} [DELETE]
+// @Summary      DELETE BRANCH BY ID
+// @Description  DELETES BRANCH BASED ON ID
+// @Tags         BRANCH
+// @Accept       json
+// @Produce      json
+// @Param        id    path     string  true  "id of branch" format(uuid)
+// @Success      200  {string}  string
+// @Failure      400  {object}  response.ErrorResp
+// @Failure      404  {object}  response.ErrorResp
+// @Failure      500  {object}  response.ErrorResp
 func (h *Handler) DeleteBranch(c *gin.Context) {
 	id := c.Param("id")
 
